--- a/package.json
+++ b/package.json
@@ -30,22 +30,23 @@
   "homepage": "https://wwebjs.dev/",
   "dependencies": {
     "@pedroslopez/moduleraid": "^5.0.2",
+    "@sparticuz/chromium-min": "^130.0.0",
     "fluent-ffmpeg": "2.1.3",
     "mime": "^4.0.4",
     "node-fetch": "^3.3.2",
     "node-webpmux": "3.2.0",
-    "puppeteer": "^23.6.1"
+    "puppeteer-core": "^23.7.0"
   },
   "devDependencies": {
-   "@types/node-fetch": "^2.6.11",
+    "@types/node-fetch": "^2.6.11",
     "chai": "^5.1.2",
     "chai-as-promised": "^8.0.0",
     "dotenv": "^16.4.5",
     "eslint": "^9.14.0",
     "eslint-plugin-mocha": "^10.5.0",
-    "jsdoc": "^4.0.4",
+    "jsdoc": "^3.6.3",
     "jsdoc-baseline": "^0.1.5",
-  "mocha": "^10.8.2",
+    "mocha": "^10.8.2",
     "sinon": "^19.0.2"
   },
   "engines": {
