--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "homepage": "https://wwebjs.dev/",
   "dependencies": {
     "@pedroslopez/moduleraid": "^5.0.2",
-    "@sparticuz/chromium-min": "^130.0.0",
+    "@sparticuz/chromium-min": "130.0.0",
     "fluent-ffmpeg": "2.1.3",
     "mime": "^4.0.4",
     "node-fetch": "^3.3.2",
     "node-webpmux": "3.2.0",
-    "puppeteer-core": "^23.7.0"
+    "puppeteer-core": "23.7.0"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.11",
