--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "homepage": "https://wwebjs.dev/",
   "dependencies": {
     "@pedroslopez/moduleraid": "^5.0.2",
-    "@sparticuz/chromium-min": "130.0.0",
+    "@sparticuz/chromium": "130.0.0",
     "fluent-ffmpeg": "2.1.3",
     "mime": "^4.0.4",
     "node-fetch": "^3.3.2",
